--- a/CelShader/CelShader/CelShader.csproj
+++ b/CelShader/CelShader/CelShader.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Entity\CelBase.cs" />
     <Compile Include="Entity\Cube.cs" />
+    <Compile Include="Entity\Sphere.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
